# Wagyuer

./: .flake8  .gitignore  .python-version  Dockerfile  Dockerfile copy  Makefile  Procfile  README.md  db.sqlite3  docker-compose.yaml  get_indiviual_id.py  manage.py  package.json  pyproject.toml  requirements.txt  requirements.txt.cp  test.ipynb  wsgi.py
.ipynb_checkpoints/: test-checkpoint.ipynb
setting/: settings.py  urls.py  wsgi.py
up_img/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
up_img/migrations/: 0001_initial.py  0002_wagyupackageimgpath.py  0003_auto_20200815_0645.py
up_img/templates/: index.html  show_wagyu_info.html
wagyuer/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
wagyuer/fixtures/: user.json  user.yaml
wagyuer/migrations/: 0001_initial.py  0002_auto_20210103_1516.py  0003_auto_20210103_1528.py  0004_auto_20210103_1741.py  0005_auto_20210103_1750.py  0006_auto_20210103_1753.py  0007_auto_20210103_1805.py  0008_auto_20210103_1807.py  0009_auto_20210103_2346.py  0010_auto_20210103_2357.py  0011_auto_20210104_0007.py  0012_wagyuinfomation_wagyu_package.py  0013_wagyuinfomation_insert_date.py
wagyuer/modules/: wagyuer.py
wagyuer/static/css/: index.css
wagyuer/templates/: index.html  spa.html  wagyu_infomation.html
